Align Title Latest news correctly

--- a/styles.css
+++ b/styles.css
@@ -315,6 +315,9 @@ h2 {
   grid-gap: 10px;
   margin-bottom: 50px;
 }
+.wrap_news {
+  position: relative;
+}
 
 .latest_news div {
   width: 100%;
@@ -384,6 +387,11 @@ h2 {
   display: block;
   padding-bottom: 0;
 }
+.latest_title {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 30px;
+}
 
 .wrap_title {
   margin: 10px;
@@ -420,6 +428,11 @@ h2 {
     grid-template-columns: repeat(3, 1fr);
     grid-auto-rows: repeat(minmax(230px, auto));
     padding: 10px;
+    grid-gap: 30px;
+  }
+  .latest_title {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     grid-gap: 30px;
   }
 
@@ -478,6 +491,18 @@ h2 {
     display: flex;
     margin: 5px 0;
     padding: 0;
+  }
+
+  .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    border: 0;
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(87, 86, 86, 0.2);
+    background-image: linear-gradient(to bottom, rgba(87, 86, 86, 0.2), rgba(0, 0, 0, 1));
   }
 
   
@@ -755,15 +780,7 @@ div {
 }
 
 .overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  border: 0;
-  margin: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(87, 86, 86, 0.2);
-  background-image: linear-gradient(to bottom, rgba(87, 86, 86, 0.2), rgba(0, 0, 0, 1));
+  top: 4%;
 }
 
 .date {
@@ -829,7 +846,7 @@ span {
 
   .caption {
     position: absolute;
-    top: 0;
+    top: 4%;
     left: 10px;
     color: #fff;
   }
@@ -865,6 +882,8 @@ span {
   }
 
   .sub-feature h3 {
+    position: relative;
+    top: 20px;
     font-size: 22px;
     margin: 0;
     padding: 10px 0;
@@ -905,7 +924,14 @@ span {
     margin: 0;
     line-height: 30px;
   }
-
+  .latest_title {
+    display: grid;
+    max-width: 1252px;
+    margin-left: auto;
+    margin-right: auto;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 30px;
+  }
   .date {
     display: block;
     position: absolute;
